parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls stmt
   4        | decls fdecl

   5  fdecl : DEF ID LPAREN formals_opt RPAREN COLON typ LBRACE vdecl_list stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : typ ID
   9              | formal_list COMMA typ ID

  10  typ : INT
  11      | BOOL
  12      | VOID
  13      | STRING
  14      | NUM

  15  vdecl_list :
  16             | vdecl_list vdecl

  17  vdecl : typ ID SEMI

  18  stmt_list :
  19            | stmt_list stmt

  20  stmt : expr SEMI
  21       | RETURN SEMI
  22       | RETURN expr SEMI
  23       | LBRACE stmt_list RBRACE
  24       | IF LPAREN expr RPAREN stmt
  25       | IF LPAREN expr RPAREN stmt else_stmt
  26       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  27       | WHILE LPAREN expr RPAREN stmt
  28       | typ ID ASSIGN expr SEMI
  29       | vdecl

  30  else_stmt : ELSEIF LPAREN expr RPAREN stmt else_stmt
  31            | ELSE stmt

  32  expr_opt :
  33           | expr

  34  expr : LITERAL
  35       | TRUE
  36       | FALSE
  37       | STRING_LITERAL
  38       | NUM_LITERAL
  39       | ID
  40       | expr PLUS expr
  41       | expr MINUS expr
  42       | expr TIMES expr
  43       | expr DIVIDE expr
  44       | expr EXP expr
  45       | expr LOG expr
  46       | expr MOD expr
  47       | expr EQ expr
  48       | expr NEQ expr
  49       | expr LT expr
  50       | expr LEQ expr
  51       | expr GT expr
  52       | expr GEQ expr
  53       | expr AND expr
  54       | expr OR expr
  55       | MINUS expr
  56       | NOT expr
  57       | ID ASSIGN expr
  58       | ID LPAREN actuals_opt RPAREN
  59       | LPAREN expr RPAREN

  60  actuals_opt :
  61              | actuals_list

  62  actuals_list : expr
  63               | actuals_list COMMA expr

  64  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (64)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (64)

	.  reduce 64


state 4
	program : decls . EOF  (1)
	decls : decls . stmt  (3)
	decls : decls . fdecl  (4)

	LPAREN  shift 5
	LBRACE  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	INT  shift 15
	BOOL  shift 16
	VOID  shift 17
	STRING  shift 18
	NUM  shift 19
	DEF  shift 20
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	EOF  shift 25
	.  error

	stmt  goto 26
	fdecl  goto 27
	typ  goto 28
	vdecl  goto 29
	expr  goto 30


state 5
	expr : LPAREN . expr RPAREN  (59)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 31


state 6
	stmt : LBRACE . stmt_list RBRACE  (23)
	stmt_list : .  (18)

	.  reduce 18

	stmt_list  goto 32


state 7
	expr : MINUS . expr  (55)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 33


state 8
	expr : NOT . expr  (56)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 34


state 9
	expr : TRUE .  (35)

	.  reduce 35


state 10
	expr : FALSE .  (36)

	.  reduce 36


state 11
	stmt : RETURN . SEMI  (21)
	stmt : RETURN . expr SEMI  (22)

	SEMI  shift 35
	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 36


state 12
	stmt : IF . LPAREN expr RPAREN stmt  (24)
	stmt : IF . LPAREN expr RPAREN stmt else_stmt  (25)

	LPAREN  shift 37
	.  error


state 13
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (26)

	LPAREN  shift 38
	.  error


state 14
	stmt : WHILE . LPAREN expr RPAREN stmt  (27)

	LPAREN  shift 39
	.  error


state 15
	typ : INT .  (10)

	.  reduce 10


state 16
	typ : BOOL .  (11)

	.  reduce 11


state 17
	typ : VOID .  (12)

	.  reduce 12


state 18
	typ : STRING .  (13)

	.  reduce 13


state 19
	typ : NUM .  (14)

	.  reduce 14


state 20
	fdecl : DEF . ID LPAREN formals_opt RPAREN COLON typ LBRACE vdecl_list stmt_list RBRACE  (5)

	ID  shift 40
	.  error


state 21
	expr : LITERAL .  (34)

	.  reduce 34


state 22
	expr : STRING_LITERAL .  (37)

	.  reduce 37


state 23
	expr : ID .  (39)
	expr : ID . ASSIGN expr  (57)
	expr : ID . LPAREN actuals_opt RPAREN  (58)

	LPAREN  shift 41
	ASSIGN  shift 42
	SEMI  reduce 39
	RPAREN  reduce 39
	COMMA  reduce 39
	PLUS  reduce 39
	MINUS  reduce 39
	TIMES  reduce 39
	DIVIDE  reduce 39
	EXP  reduce 39
	LOG  reduce 39
	MOD  reduce 39
	EQ  reduce 39
	NEQ  reduce 39
	LT  reduce 39
	LEQ  reduce 39
	GT  reduce 39
	GEQ  reduce 39
	AND  reduce 39
	OR  reduce 39


state 24
	expr : NUM_LITERAL .  (38)

	.  reduce 38


state 25
	program : decls EOF .  (1)

	.  reduce 1


state 26
	decls : decls stmt .  (3)

	.  reduce 3


state 27
	decls : decls fdecl .  (4)

	.  reduce 4


state 28
	vdecl : typ . ID SEMI  (17)
	stmt : typ . ID ASSIGN expr SEMI  (28)

	ID  shift 43
	.  error


state 29
	stmt : vdecl .  (29)

	.  reduce 29


state 30
	stmt : expr . SEMI  (20)
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EXP expr  (44)
	expr : expr . LOG expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)

	SEMI  shift 44
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIVIDE  shift 48
	EXP  shift 49
	LOG  shift 50
	MOD  shift 51
	EQ  shift 52
	NEQ  shift 53
	LT  shift 54
	LEQ  shift 55
	GT  shift 56
	GEQ  shift 57
	AND  shift 58
	OR  shift 59
	.  error


state 31
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EXP expr  (44)
	expr : expr . LOG expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : LPAREN expr . RPAREN  (59)

	RPAREN  shift 60
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIVIDE  shift 48
	EXP  shift 49
	LOG  shift 50
	MOD  shift 51
	EQ  shift 52
	NEQ  shift 53
	LT  shift 54
	LEQ  shift 55
	GT  shift 56
	GEQ  shift 57
	AND  shift 58
	OR  shift 59
	.  error


state 32
	stmt_list : stmt_list . stmt  (19)
	stmt : LBRACE stmt_list . RBRACE  (23)

	LPAREN  shift 5
	LBRACE  shift 6
	RBRACE  shift 61
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	INT  shift 15
	BOOL  shift 16
	VOID  shift 17
	STRING  shift 18
	NUM  shift 19
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	stmt  goto 62
	typ  goto 28
	vdecl  goto 29
	expr  goto 30


state 33
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EXP expr  (44)
	expr : expr . LOG expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : MINUS expr .  (55)

	.  reduce 55


state 34
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EXP expr  (44)
	expr : expr . LOG expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : NOT expr .  (56)

	.  reduce 56


state 35
	stmt : RETURN SEMI .  (21)

	.  reduce 21


state 36
	stmt : RETURN expr . SEMI  (22)
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EXP expr  (44)
	expr : expr . LOG expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)

	SEMI  shift 63
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIVIDE  shift 48
	EXP  shift 49
	LOG  shift 50
	MOD  shift 51
	EQ  shift 52
	NEQ  shift 53
	LT  shift 54
	LEQ  shift 55
	GT  shift 56
	GEQ  shift 57
	AND  shift 58
	OR  shift 59
	.  error


state 37
	stmt : IF LPAREN . expr RPAREN stmt  (24)
	stmt : IF LPAREN . expr RPAREN stmt else_stmt  (25)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 64


state 38
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (26)
	expr_opt : .  (32)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	SEMI  reduce 32

	expr  goto 65
	expr_opt  goto 66


state 39
	stmt : WHILE LPAREN . expr RPAREN stmt  (27)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 67


state 40
	fdecl : DEF ID . LPAREN formals_opt RPAREN COLON typ LBRACE vdecl_list stmt_list RBRACE  (5)

	LPAREN  shift 68
	.  error


state 41
	expr : ID LPAREN . actuals_opt RPAREN  (58)
	actuals_opt : .  (60)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	RPAREN  reduce 60

	expr  goto 69
	actuals_opt  goto 70
	actuals_list  goto 71


state 42
	expr : ID ASSIGN . expr  (57)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 72


state 43
	vdecl : typ ID . SEMI  (17)
	stmt : typ ID . ASSIGN expr SEMI  (28)

	SEMI  shift 73
	ASSIGN  shift 74
	.  error


state 44
	stmt : expr SEMI .  (20)

	.  reduce 20


state 45
	expr : expr PLUS . expr  (40)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 75


state 46
	expr : expr MINUS . expr  (41)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 76


state 47
	expr : expr TIMES . expr  (42)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 77


state 48
	expr : expr DIVIDE . expr  (43)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 78


state 49
	expr : expr EXP . expr  (44)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 79


state 50
	expr : expr LOG . expr  (45)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 80


state 51
	expr : expr MOD . expr  (46)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 81


state 52
	expr : expr EQ . expr  (47)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 82


state 53
	expr : expr NEQ . expr  (48)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 83


state 54
	expr : expr LT . expr  (49)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 84


state 55
	expr : expr LEQ . expr  (50)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 85


state 56
	expr : expr GT . expr  (51)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 86


state 57
	expr : expr GEQ . expr  (52)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 87


state 58
	expr : expr AND . expr  (53)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 88


state 59
	expr : expr OR . expr  (54)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 89


state 60
	expr : LPAREN expr RPAREN .  (59)

	.  reduce 59


state 61
	stmt : LBRACE stmt_list RBRACE .  (23)

	.  reduce 23


state 62
	stmt_list : stmt_list stmt .  (19)

	.  reduce 19


state 63
	stmt : RETURN expr SEMI .  (22)

	.  reduce 22


state 64
	stmt : IF LPAREN expr . RPAREN stmt  (24)
	stmt : IF LPAREN expr . RPAREN stmt else_stmt  (25)
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EXP expr  (44)
	expr : expr . LOG expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)

	RPAREN  shift 90
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIVIDE  shift 48
	EXP  shift 49
	LOG  shift 50
	MOD  shift 51
	EQ  shift 52
	NEQ  shift 53
	LT  shift 54
	LEQ  shift 55
	GT  shift 56
	GEQ  shift 57
	AND  shift 58
	OR  shift 59
	.  error


state 65
	expr_opt : expr .  (33)
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EXP expr  (44)
	expr : expr . LOG expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)

	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIVIDE  shift 48
	EXP  shift 49
	LOG  shift 50
	MOD  shift 51
	EQ  shift 52
	NEQ  shift 53
	LT  shift 54
	LEQ  shift 55
	GT  shift 56
	GEQ  shift 57
	AND  shift 58
	OR  shift 59
	SEMI  reduce 33
	RPAREN  reduce 33


state 66
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (26)

	SEMI  shift 91
	.  error


state 67
	stmt : WHILE LPAREN expr . RPAREN stmt  (27)
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EXP expr  (44)
	expr : expr . LOG expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)

	RPAREN  shift 92
	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIVIDE  shift 48
	EXP  shift 49
	LOG  shift 50
	MOD  shift 51
	EQ  shift 52
	NEQ  shift 53
	LT  shift 54
	LEQ  shift 55
	GT  shift 56
	GEQ  shift 57
	AND  shift 58
	OR  shift 59
	.  error


state 68
	fdecl : DEF ID LPAREN . formals_opt RPAREN COLON typ LBRACE vdecl_list stmt_list RBRACE  (5)
	formals_opt : .  (6)

	INT  shift 15
	BOOL  shift 16
	VOID  shift 17
	STRING  shift 18
	NUM  shift 19
	RPAREN  reduce 6

	formals_opt  goto 93
	typ  goto 94
	formal_list  goto 95


state 69
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EXP expr  (44)
	expr : expr . LOG expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	actuals_list : expr .  (62)

	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIVIDE  shift 48
	EXP  shift 49
	LOG  shift 50
	MOD  shift 51
	EQ  shift 52
	NEQ  shift 53
	LT  shift 54
	LEQ  shift 55
	GT  shift 56
	GEQ  shift 57
	AND  shift 58
	OR  shift 59
	RPAREN  reduce 62
	COMMA  reduce 62


state 70
	expr : ID LPAREN actuals_opt . RPAREN  (58)

	RPAREN  shift 96
	.  error


state 71
	actuals_opt : actuals_list .  (61)
	actuals_list : actuals_list . COMMA expr  (63)

	COMMA  shift 97
	RPAREN  reduce 61


state 72
	expr : expr . PLUS expr  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EXP expr  (44)
	expr : expr . LOG expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : ID ASSIGN expr .  (57)

	PLUS  shift 45
	MINUS  shift 46
	TIMES  shift 47
	DIVIDE  shift 48
	EXP  shift 49
	LOG  shift 50
	MOD  shift 51
	EQ  shift 52
	NEQ  shift 53
	LT  shift 54
	LEQ  shift 55
	GT  shift 56
	GEQ  shift 57
	AND  shift 58
	OR  shift 59
	SEMI  reduce 57
	RPAREN  reduce 57
	COMMA  reduce 57


state 73
	vdecl : typ ID SEMI .  (17)

	.  reduce 17


state 74
	stmt : typ ID ASSIGN . expr SEMI  (28)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 21
	STRING_LITERAL  shift 22
	ID  shift 23
	NUM_LITERAL  shift 24
	.  error

	expr  goto 98


state 75
	expr : expr . PLUS expr  (40)
	expr : expr PLUS expr .  (40)
	expr : expr . MINUS expr  (41)
	expr : expr . TIMES expr  (42)
	expr : expr . DIVIDE expr  (43)
	expr : expr . EXP expr  (44)
	expr : expr . LOG expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)

	TIMES  shift 47
	DIVIDE  shift 48
	EXP  shift 49
	LOG  shift 50
	MOD  shift 51
	SEMI  reduce 40
	RPAREN  reduce 40
	COMMA  reduce 40
	PLUS  reduce 40
	MINUS  reduce 40
	EQ  reduce 40
	NEQ  reduce 40
	LT  reduce 40
	LEQ  reduce 40
	GT  reduce 40
	GEQ  reduce 40
	AND  reduce 40
	OR  reduce 40

